--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       #root {
         margin: 0;
         padding: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
       }
     </style>
   </head>
